--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ Yellow-Grass eater<br>
     <title>Document</title>
 </head>
 <body>
+        <button id="automn">automn</button>
+        <button id="winter">winter</button>
+        <button id="summer">summer</button>
+        
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="script.js"></script>
