--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <button id="automn">automn</button>
   <button id="winter">winter</button>
   <button id="summer">summer</button>
+  <button id="garun">spring</button>
+
 
 
   <h1>GAME OF LIFE</h1>
