--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <button id="summer">summer</button>
   <button id="garun">spring</button>
 
+  <div class="totals">
+    <p><b id="Grass"></b></p>
+    <p><b id="Grasseater"></b></p>
+    <p><b id="Lizard"></b></p>
+    <p><b id="LizardGirl"></b></p>
+    <p><b id="GrasseaterGirl"></b></p>
+    <p><b id="Bogomol"></b></p>
+    <p><b id="BogomolGirl"></b></p>
+
+  </div>
+
 
 
   <h1>GAME OF LIFE</h1>
